--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -4,7 +4,9 @@
     top: 0;
     width: 100%;
     height: 30px;
-    background-color: #111;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .logo
