--- a/src/Components/RowPost/RowPost.css
+++ b/src/Components/RowPost/RowPost.css
@@ -21,10 +21,21 @@
 {
     max-height: 250px;
     margin-right: 10px;
+    cursor: pointer;
 }
 
 .smallPoster
 {
     max-height: 150px;
     margin-right: 10px;
+    cursor: pointer;
+}
+
+.smallPoster:hover
+{
+    transform: scale(1.1);
+}
+.poster:hover
+{
+    transform: scale(1.1)
 }
